# atlassian-browser-mcp

./: .gitignore  AGENTS.md  README.md  atlassian_browser_auth.py  atlassian_browser_mcp_full.py  pyproject.toml  run-atlassian-browser-mcp.sh
